# basilic

./: .gitignore  BUILD_README.md  DISTRIBUTION_GUIDE.md  LICENSE  QUICKSTART.md  QUICK_BUILD_GUIDE.txt  README.md  SETUP_GUIDE.md  basilic.spec  build.bat  build.sh  build_exe.py  build_instructions.md  package-lock.json  requirements.txt
client_cpp/: .clang-format  CMakeLists.txt  COMPILER_SETUP.md  MANAGER_README.md  README.md  TESTING_GUIDE.md  TEST_README.md  build.bat  build.sh  main.cpp  test_build.bat  test_build.sh  test_managers.bat  test_managers.cpp  test_models.cpp
client_cpp/manager/: DatabaseManager.cpp  DatabaseManager.h  DraftManager.cpp  DraftManager.h  ImageCache.cpp  ImageCache.h  LobbyManager.cpp  LobbyManager.h  SupabaseClient.cpp  SupabaseClient.h
client_cpp/model/: Booster.cpp  Booster.h  Card.cpp  Card.h  Draft.cpp  DraftPack.cpp  DraftPack.h  Lobby.cpp  Lobby.h  LobbyPlayer.cpp  LobbyPlayer.h  PlayerPool.cpp  PlayerPool.h  Set.cpp  Set.h
client_cpp/ui/: MainWindow.cpp
client_cpp/utils/: Config.cpp  Config.h
client_py/: main.py  requirements.txt
client_py/core/: booster_generator.py  draft_manager.py  lobby_manager.py  supabase_client.py
client_py/database/: basilic.db  db_init.py  db_manager.py
client_py/ui/: main_window.py
data/: blb_cards.json  import_batch_1.sql  import_batch_2.sql  import_batch_3.sql  import_batch_4.sql  import_batch_5.sql  import_batch_6.sql  mkm_cards.json  neo_cards.json
database/: basilic.db
docs/: CPP_MCD.md  LOBBY_SYSTEM.md  USAGE.md
scripts/: check_database.py  example_draft.py  fast_import.py  generate_batch.sh  import_all_blb.js  import_blb_node.js  import_blb_quick.py  import_cards.py  import_cards_to_db.js  import_mini_batches.js  import_multiple_sets.py  import_supabase_direct.sh  import_to_supabase.py  interactive_draft.py  lobby_database.py  show_import_sql.js  test_complete_draft.py  view_cards.py
server_node/: package-lock.json  package.json
supabase/migrations/: 20251126163040_create_lobby_system.sql  20251126194415_add_lobby_cleanup_function.sql  20251209135519_20251126194415_add_lobby_cleanup_function.sql  20251209144153_create_cards_and_sets_tables.sql  20251209145331_fix_sets_and_cards_rls_policies.sql  20251209145617_add_update_policies_for_sets_and_cards.sql  20251209153200_create_draft_system_tables.sql  20251209161936_add_set_code_to_lobbies.sql
